gen/NNGraphParser.py
# Generated from C:/Users/Lenovo/PycharmProjects/Final Project/NNGraph.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class NNGraphParser ( Parser ):

    grammarFileName = "NNGraph.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'input'", "'output'", "'graph'", 
                     "'node'", "'edge'", "'config'", "'tensor'", "'label'", 
                     "'Linear'", "'Conv2d'", "'Conv1d'", "'BatchNorm2d'", 
                     "'LayerNorm'", "'MaxPool2d'", "'AvgPool2d'", "'Dropout'", 
                     "'Flatten'", "'Embedding'", "'MultiHeadAttn'", "'LSTM'", 
                     "'GRU'", "'ReLU'", "'Sigmoid'", "'Tanh'", "'GELU'", 
                     "'Softmax'", "'LeakyReLU'", "'ELU'", "'Add'", "'Concat'", 
                     "'Residual'", "'Split'", "'true'", "'false'", "'None'", 
                     "'->'", "'='", "':'", "','", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "'in_features'", "'out_features'", "'in_ch'", 
                     "'out_ch'", "'kernel'", "'stride'", "'padding'", "'bias'", 
                     "'num_features'", "'normalized_shape'", "'start_dim'", 
                     "'end_dim'", "'num_embeddings'", "'embedding_dim'", 
                     "'embed_dim'", "'num_heads'", "'input_size'", "'hidden_size'", 
                     "'num_layers'", "'p'", "'dim'", "'chunks'", "'negative_slope'", 
                     "'alpha'", "'batch_size'", "'device'" ]

    symbolicNames = [ "<INVALID>", "MODEL", "INPUT", "OUTPUT", "GRAPH", 
                      "NODE", "EDGE", "CONFIG", "TENSOR", "LABEL", "LINEAR", 
                      "CONV2D", "CONV1D", "BATCHNORM2D", "LAYERNORM", "MAXPOOL2D", 
                      "AVGPOOL2D", "DROPOUT", "FLATTEN", "EMBEDDING", "MULTIHEADATTN", 
                      "LSTM", "GRU", "RELU", "SIGMOID", "TANH", "GELU", 
                      "SOFTMAX", "LEAKYRELU", "ELU", "ADD", "CONCAT", "RESIDUAL", 
                      "SPLIT", "TRUE", "FALSE", "NONE", "ARROW", "ASSIGN", 
                      "COLON", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "LBRACKET", "RBRACKET", "IN_FEATURES", "OUT_FEATURES", 
                      "IN_CH", "OUT_CH", "KERNEL", "STRIDE", "PADDING", 
                      "BIAS", "NUM_FEATURES", "NORMALIZED_SHAPE", "START_DIM", 
                      "END_DIM", "NUM_EMBEDDINGS", "EMBEDDING_DIM", "EMBED_DIM", 
                      "NUM_HEADS", "INPUT_SIZE", "HIDDEN_SIZE", "NUM_LAYERS", 
                      "P", "DIM", "CHUNKS", "NEGATIVE_SLOPE", "ALPHA", "BATCH_SIZE", 
                      "DEVICE", "FLOAT", "INT", "STRING", "ID", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_modelDecl = 1
    RULE_inputDecl = 2
    RULE_outputDecl = 3
    RULE_tensorType = 4
    RULE_shape = 5
    RULE_graphDecl = 6
    RULE_graphStatement = 7
    RULE_nodeDecl = 8
    RULE_nodeType = 9
    RULE_edgeDecl = 10
    RULE_edgeLabel = 11
    RULE_configDecl = 12
    RULE_configItem = 13
    RULE_value = 14
    RULE_tuple = 15
    RULE_parameterList = 16
    RULE_parameter = 17
    RULE_parameterName = 18
    RULE_layer = 19
    RULE_activation = 20
    RULE_operation = 21
    RULE_linearLayer = 22
    RULE_conv2dLayer = 23
    RULE_conv1dLayer = 24
    RULE_batchNormLayer = 25
    RULE_layerNormLayer = 26
    RULE_maxPoolLayer = 27
    RULE_avgPoolLayer = 28
    RULE_dropoutLayer = 29
    RULE_flattenLayer = 30
    RULE_embeddingLayer = 31
    RULE_multiHeadLayer = 32
    RULE_lstmLayer = 33
    RULE_gruLayer = 34
    RULE_reluLayer = 35
    RULE_sigmoidLayer = 36
    RULE_tanhLayer = 37
    RULE_geluLayer = 38
    RULE_softmaxLayer = 39
    RULE_leakyReluLayer = 40
    RULE_eluLayer = 41
    RULE_addLayer = 42
    RULE_concatLayer = 43
    RULE_residualLayer = 44
    RULE_splitLayer = 45

    ruleNames =  [ "program", "modelDecl", "inputDecl", "outputDecl", "tensorType", 
                   "shape", "graphDecl", "graphStatement", "nodeDecl", "nodeType", 
                   "edgeDecl", "edgeLabel", "configDecl", "configItem", 
                   "value", "tuple", "parameterList", "parameter", "parameterName", 
                   "layer", "activation", "operation", "linearLayer", "conv2dLayer", 
                   "conv1dLayer", "batchNormLayer", "layerNormLayer", "maxPoolLayer", 
                   "avgPoolLayer", "dropoutLayer", "flattenLayer", "embeddingLayer", 
                   "multiHeadLayer", "lstmLayer", "gruLayer", "reluLayer", 
                   "sigmoidLayer", "tanhLayer", "geluLayer", "softmaxLayer", 
                   "leakyReluLayer", "eluLayer", "addLayer", "concatLayer", 
                   "residualLayer", "splitLayer" ]

    EOF = Token.EOF
    MODEL=1
    INPUT=2
    OUTPUT=3
    GRAPH=4
    NODE=5
    EDGE=6
    CONFIG=7
    TENSOR=8
    LABEL=9
    LINEAR=10
    CONV2D=11
    CONV1D=12
    BATCHNORM2D=13
    LAYERNORM=14
    MAXPOOL2D=15
    AVGPOOL2D=16
    DROPOUT=17
    FLATTEN=18
    EMBEDDING=19
    MULTIHEADATTN=20
    LSTM=21
    GRU=22
    RELU=23
    SIGMOID=24
    TANH=25
    GELU=26
    SOFTMAX=27
    LEAKYRELU=28
    ELU=29
    ADD=30
    CONCAT=31
    RESIDUAL=32
    SPLIT=33
    TRUE=34
    FALSE=35
    NONE=36
    ARROW=37
    ASSIGN=38
    COLON=39
    COMMA=40
    LPAREN=41
    RPAREN=42
    LBRACE=43
    RBRACE=44
    LBRACKET=45
    RBRACKET=46
    IN_FEATURES=47
    OUT_FEATURES=48
    IN_CH=49
    OUT_CH=50
    KERNEL=51
    STRIDE=52
    PADDING=53
    BIAS=54
    NUM_FEATURES=55
    NORMALIZED_SHAPE=56
    START_DIM=57
    END_DIM=58
    NUM_EMBEDDINGS=59
    EMBEDDING_DIM=60
    EMBED_DIM=61
    NUM_HEADS=62
    INPUT_SIZE=63
    HIDDEN_SIZE=64
    NUM_LAYERS=65
    P=66
    DIM=67
    CHUNKS=68
    NEGATIVE_SLOPE=69
    ALPHA=70
    BATCH_SIZE=71
    DEVICE=72
    FLOAT=73
    INT=74
    STRING=75
    ID=76
    LINE_COMMENT=77
    BLOCK_COMMENT=78
    WS=79

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelDecl(self):
            return self.getTypedRuleContext(NNGraphParser.ModelDeclContext,0)


        def graphDecl(self):
            return self.getTypedRuleContext(NNGraphParser.GraphDeclContext,0)


        def EOF(self):
            return self.getToken(NNGraphParser.EOF, 0)

        def configDecl(self):
            return self.getTypedRuleContext(NNGraphParser.ConfigDeclContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = NNGraphParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.modelDecl()
            self.state = 93
            self.graphDecl()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 94
                self.configDecl()


            self.state = 97
            self.match(NNGraphParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(NNGraphParser.MODEL, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def LBRACE(self):
            return self.getToken(NNGraphParser.LBRACE, 0)

        def inputDecl(self):
            return self.getTypedRuleContext(NNGraphParser.InputDeclContext,0)


        def outputDecl(self):
            return self.getTypedRuleContext(NNGraphParser.OutputDeclContext,0)


        def RBRACE(self):
            return self.getToken(NNGraphParser.RBRACE, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_modelDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelDecl" ):
                listener.enterModelDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelDecl" ):
                listener.exitModelDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelDecl" ):
                return visitor.visitModelDecl(self)
            else:
                return visitor.visitChildren(self)




    def modelDecl(self):

        localctx = NNGraphParser.ModelDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_modelDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(NNGraphParser.MODEL)
            self.state = 100
            self.match(NNGraphParser.ID)
            self.state = 101
            self.match(NNGraphParser.LBRACE)
            self.state = 102
            self.inputDecl()
            self.state = 103
            self.outputDecl()
            self.state = 104
            self.match(NNGraphParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(NNGraphParser.INPUT, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def COLON(self):
            return self.getToken(NNGraphParser.COLON, 0)

        def tensorType(self):
            return self.getTypedRuleContext(NNGraphParser.TensorTypeContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_inputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputDecl" ):
                listener.enterInputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputDecl" ):
                listener.exitInputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputDecl" ):
                return visitor.visitInputDecl(self)
            else:
                return visitor.visitChildren(self)




    def inputDecl(self):

        localctx = NNGraphParser.InputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(NNGraphParser.INPUT)
            self.state = 107
            self.match(NNGraphParser.ID)
            self.state = 108
            self.match(NNGraphParser.COLON)
            self.state = 109
            self.tensorType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT(self):
            return self.getToken(NNGraphParser.OUTPUT, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_outputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputDecl" ):
                listener.enterOutputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputDecl" ):
                listener.exitOutputDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputDecl" ):
                return visitor.visitOutputDecl(self)
            else:
                return visitor.visitChildren(self)




    def outputDecl(self):

        localctx = NNGraphParser.OutputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_outputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(NNGraphParser.OUTPUT)
            self.state = 112
            self.match(NNGraphParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TensorTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TENSOR(self):
            return self.getToken(NNGraphParser.TENSOR, 0)

        def LPAREN(self):
            return self.getToken(NNGraphParser.LPAREN, 0)

        def shape(self):
            return self.getTypedRuleContext(NNGraphParser.ShapeContext,0)


        def RPAREN(self):
            return self.getToken(NNGraphParser.RPAREN, 0)

        def getRuleIndex(self):
            return NNGraphParser.RULE_tensorType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTensorType" ):
                listener.enterTensorType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTensorType" ):
                listener.exitTensorType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTensorType" ):
                return visitor.visitTensorType(self)
            else:
                return visitor.visitChildren(self)




    def tensorType(self):

        localctx = NNGraphParser.TensorTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tensorType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(NNGraphParser.TENSOR)
            self.state = 115
            self.match(NNGraphParser.LPAREN)
            self.state = 116
            self.shape()
            self.state = 117
            self.match(NNGraphParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShapeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.INT)
            else:
                return self.getToken(NNGraphParser.INT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(NNGraphParser.COMMA)
            else:
                return self.getToken(NNGraphParser.COMMA, i)

        def getRuleIndex(self):
            return NNGraphParser.RULE_shape

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShape" ):
                listener.enterShape(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShape" ):
                listener.exitShape(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShape" ):
                return visitor.visitShape(self)
            else:
                return visitor.visitChildren(self)




    def shape(self):

        localctx = NNGraphParser.ShapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_shape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(NNGraphParser.INT)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==40:
                self.state = 120
                self.match(NNGraphParser.COMMA)
                self.state = 121
                self.match(NNGraphParser.INT)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAPH(self):
            return self.getToken(NNGraphParser.GRAPH, 0)

        def LBRACE(self):
            return self.getToken(NNGraphParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(NNGraphParser.RBRACE, 0)

        def graphStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(NNGraphParser.GraphStatementContext)
            else:
                return self.getTypedRuleContext(NNGraphParser.GraphStatementContext,i)


        def getRuleIndex(self):
            return NNGraphParser.RULE_graphDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphDecl" ):
                listener.enterGraphDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphDecl" ):
                listener.exitGraphDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphDecl" ):
                return visitor.visitGraphDecl(self)
            else:
                return visitor.visitChildren(self)




    def graphDecl(self):

        localctx = NNGraphParser.GraphDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_graphDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(NNGraphParser.GRAPH)
            self.state = 128
            self.match(NNGraphParser.LBRACE)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 129
                self.graphStatement()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(NNGraphParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeDecl(self):
            return self.getTypedRuleContext(NNGraphParser.NodeDeclContext,0)


        def edgeDecl(self):
            return self.getTypedRuleContext(NNGraphParser.EdgeDeclContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_graphStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraphStatement" ):
                listener.enterGraphStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraphStatement" ):
                listener.exitGraphStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphStatement" ):
                return visitor.visitGraphStatement(self)
            else:
                return visitor.visitChildren(self)




    def graphStatement(self):

        localctx = NNGraphParser.GraphStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_graphStatement)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.nodeDecl()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.edgeDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NODE(self):
            return self.getToken(NNGraphParser.NODE, 0)

        def ID(self):
            return self.getToken(NNGraphParser.ID, 0)

        def COLON(self):
            return self.getToken(NNGraphParser.COLON, 0)

        def nodeType(self):
            return self.getTypedRuleContext(NNGraphParser.NodeTypeContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_nodeDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeDecl" ):
                listener.enterNodeDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeDecl" ):
                listener.exitNodeDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeDecl" ):
                return visitor.visitNodeDecl(self)
            else:
                return visitor.visitChildren(self)




    def nodeDecl(self):

        localctx = NNGraphParser.NodeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nodeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(NNGraphParser.NODE)
            self.state = 142
            self.match(NNGraphParser.ID)
            self.state = 143
            self.match(NNGraphParser.COLON)
            self.state = 144
            self.nodeType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def layer(self):
            return self.getTypedRuleContext(NNGraphParser.LayerContext,0)


        def activation(self):
            return self.getTypedRuleContext(NNGraphParser.ActivationContext,0)


        def operation(self):
            return self.getTypedRuleContext(NNGraphParser.OperationContext,0)


        def getRuleIndex(self):
            return NNGraphParser.RULE_nodeType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeType" ):
                listener.enterNodeType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeType" ):
                listener.exitNodeType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeType" ):
                return visitor.visitNodeType(self)
            else:
                return visitor.visitChildren(self)




    def nodeType(self):

        localctx = NNGraphParser.NodeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nodeType)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.layer()
                pass
            elif token in [23, 24, 25, 26, 27, 28, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.activation()
                pass
            elif token in [30, 31, 32, 33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.operation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EdgeDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
